--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@ body {
     position: relative;
     width: 100%;
     height: 100vh;
-    background: url('assets/img/home/home-bg.jpg');
+    background: url('../home/home-bg.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
